--- a/src/main/resources/_config.properties
+++ b/src/main/resources/_config.properties
@@ -1,5 +1,5 @@
 urlMightyXUS=https://www.amazon.com/s?i=merchant-items&me=AKGPT8B5V96TT&marketplaceID=ATVPDKIKX0DER&qid=1709381412&ref=sr_pg_1
-urlMightyXUK=https://www.amazon.com/s?me=A1EX72066FQ0SK&marketplaceID=A1F83G8C2ARO7P
+urlMightyXUK=https://www.amazon.co.uk/s?me=AKGPT8B5V96TT&marketplaceID=ATVPDKIKX0DER
 urlZoromsUS=https://www.amazon.com/s?me=AMJYVRE8582GO&marketplaceID=ATVPDKIKX0DER
 urlKivalsUS=https://www.amazon.com/s?me=A33IURZ33Q9E8U&marketplaceID=ATVPDKIKX0DER
 browser=chrome
