--- a/src/main/resources/_config.properties
+++ b/src/main/resources/_config.properties
@@ -3,6 +3,7 @@ urlMightyXUK=https://www.amazon.co.uk/s?me=A1EX72066FQ0SK&marketplaceID=A1F83G8C
 urlZoromsUS=https://www.amazon.com/s?me=AMJYVRE8582GO&marketplaceID=ATVPDKIKX0DER
 urlKivalsUS=https://www.amazon.com/s?me=A33IURZ33Q9E8U&marketplaceID=ATVPDKIKX0DER
 urlUKAmazonHomePage=https://www.amazon.co.uk
+urlHiveMind=https://app.thehivemind.co/
 browser=chrome
 
 selenium_url=http://localhost:4444/wd/hub
