--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,11 @@
 
   <dependencies>
     <dependency>
+      <groupId>org.postgresql</groupId>
+      <artifactId>postgresql</artifactId>
+      <version>42.7.2</version>
+    </dependency>
+    <dependency>
       <groupId>com.zebrunner</groupId>
       <artifactId>carina-core</artifactId>
       <version>${carina-core-version}</version>
@@ -35,6 +40,17 @@
       <groupId>com.zebrunner</groupId>
       <artifactId>carina-api</artifactId>
       <version>${carina-api-version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.mybatis</groupId>
+      <artifactId>mybatis</artifactId>
+      <version>3.5.15</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.mybatis</groupId>
+      <artifactId>mybatis-guice</artifactId>
+      <version>3.5</version>
     </dependency>
 
 
