--- a/src/main/resources/_config.properties
+++ b/src/main/resources/_config.properties
@@ -2,7 +2,8 @@ urlMightyXUS=https://www.amazon.com/s?i=merchant-items&me=AKGPT8B5V96TT&marketpl
 urlMightyXUK=https://www.amazon.co.uk/s?me=A1EX72066FQ0SK&marketplaceID=A1F83G8C2ARO7P
 urlZoromsUS=https://www.amazon.com/s?me=AMJYVRE8582GO&marketplaceID=ATVPDKIKX0DER
 urlKivalsUS=https://www.amazon.com/s?me=A33IURZ33Q9E8U&marketplaceID=ATVPDKIKX0DER
-urlUKAmazonHomePage=https://www.amazon.co.uk
+urlUKAmazonHomePage=https://www.amazon.co.uk/
+urlAmazonHomePage=https://www.amazon.com/
 urlHiveMind=https://app.thehivemind.co/
 browser=chrome
 
