--- a/src/main/resources/_config.properties
+++ b/src/main/resources/_config.properties
@@ -7,6 +7,8 @@ urlAmazonHomePage=https://www.amazon.com/
 urlHiveMind=https://app.thehivemind.co/
 browser=chrome
 
+explicit_timeout=60
+
 
 selenium_url=http://localhost:4444/wd/hub
 page_opening_strategy=BY_ELEMENT
